Checkpoint before assistant change: Fixes the menu icon alignment
Updated the Navbar component's CSS and JSX to correctly position the menu icon using the `float: right` property and adjusted other element styles.  The `menuicon` class now uses `float: right;` in `Navbar.css` and the order of elements in `Navbar.jsx` has been altered to accommodate the change.

--- a/Components/Navbar.css
+++ b/Components/Navbar.css
@@ -4,11 +4,16 @@ nav{
   display: flex;
 }
 .logo{
-  height: 60px;
-  margin-top: 10px;
+  height: 50px;
+  margin-top: 15px;
 }
 .menuicon{
-  height: 40px;
-  margin-top: 20px;
-  margin-left: 15px;
+  height: 36px;
+  margin-top: 22px;
+  float: right;
+}
+.textlogo{
+  height: 100px;
+  margin-top: -15px;
+  margin-left: -20px;
 }
